install wildcards only for prod instances
--HG--
branch : feature/microservices

--- a/ansible/roles/node/templates/etc/supervisord.conf.j2
+++ b/ansible/roles/node/templates/etc/supervisord.conf.j2
@@ -4,9 +4,11 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [ctlplugin:serialrestart]
 supervisor.ctl_factory = supervisorserialrestart.controllerplugin:make_serialrestart_controllerplugin
 
+{% if noc_env_type == "prod" %}
 [ctlplugin:wildcards]
 supervisor.ctl_factory = supervisorwildcards.controllerplugin:make_wildcards_controllerplugin
 match_group = 1
+{% endif %}
 
 [supervisorctl]
 serverurl = unix://{{ supervisor_sock_path }}
