--- a/templates/ddash/graph_interface_load_simple.j2
+++ b/templates/ddash/graph_interface_load_simple.j2
@@ -45,7 +45,7 @@
   "targets": [
     {
       "intervalFactor": 1,
-      "query": "SELECT $timeSeries as t, avg(load_in) as Input,  avg(load_out) as Output FROM $table PREWHERE managed_object = {{bi_id}} WHERE path[4]=toString('{{interface}}') and $timeFilter GROUP BY t ORDER BY t",
+      "query": "SELECT $timeSeries as t, avg(load_in) as Input,  avg(load_out) as Output FROM $table WHERE managed_object = {{bi_id}} and path[4]=toString('{{interface}}') and $timeFilter GROUP BY t ORDER BY t",
       "refId": "A",
       "resultFormat": "time_series",
       "database": "noc",
