--- a/templates/ddash/graph_interface_pps.j2
+++ b/templates/ddash/graph_interface_pps.j2
@@ -40,7 +40,7 @@
   "targets": [
     {
       "intervalFactor": 1,
-      "query": "SELECT $timeSeries as t, avg(packets_in) as `Input PPS`,  avg(packets_out) as `Output PPS` FROM $table PREWHERE managed_object = {{bi_id}} WHERE path[4]=toString('{{interface}}') and $timeFilter GROUP BY t ORDER BY t",
+      "query": "SELECT $timeSeries as t, avg(packets_in) as `Input PPS`,  avg(packets_out) as `Output PPS` FROM $table  WHERE managed_object = {{bi_id}} and path[4]=toString('{{interface}}') and $timeFilter GROUP BY t ORDER BY t",
       "refId": "A",
       "resultFormat": "time_series",
       "database": "noc",
