fix ipsla dash title
--HG--
branch : feature/microservices

--- a/templates/ddash/dash_ipsla.j2
+++ b/templates/ddash/dash_ipsla.j2
@@ -127,7 +127,7 @@
           "thresholds": [],
           "timeFrom": null,
           "timeShift": null,
-          "title": "535-Пушк.-7609#2255939",
+          "title": "$device",
           "tooltip": {
             "msResolution": false,
             "shared": true,
