--- a/ansible/roles/node/templates/etc/noc_services.conf.j2
+++ b/ansible/roles/node/templates/etc/noc_services.conf.j2
@@ -1,15 +1,15 @@
-{% for pool in noc_config.pools %}
-    {% for service in noc_config.config if not service == 'noc' %}
-        {% set srv = service.split('-')[0] %}
-        {% set p = service.split('-')[1] %}
-        {% set host = service.split('-')[2] %}
-        {% if 'category' in services[srv] and 'internal' in services[srv].category %}
-            {% if host == ansible_nodename -%}
-                {% if not 'global' in p %}
-                    {% set prg = srv+"-"+p %}
-                {% else %}
-                    {% set prg = srv %}
-                {%- endif %}
+{% for service in noc_config.config if not service == 'noc' %}
+
+    {%- set srv = service.split('-')[0] -%}
+    {%- set p = service.split('-')[1] -%}
+    {%- set host = service.split('-')[2:] | join("-") -%}
+    {%- if 'category' in services[srv] and 'internal' in services[srv].category -%}
+        {%- if host == ansible_nodename -%}
+            {% if not 'global' in p -%}
+                {% set prg = srv+"-"+p %}
+            {% else %}
+                {% set prg = srv %}
+            {%- endif %}
 
 [program:{{prg}}]
 command = {{ services[srv].command  | mandatory }}
@@ -36,8 +36,8 @@ stderr_logfile = {{noc_logs}}/{{ services[srv].process_name | default("%(program
 stderr_logfile_maxbytes = {{ services[srv].stderr_logfile_maxbytes  | default('10MB', True)}}
 stderr_logfile_backups = {{ services[srv].stderr_logfile_backups  | default(3, True)}}
 stderr_events_enabled = false
-environment=NOC_CONFIG="{{config_order}}",NOC_DC="{{ noc_dc }}",NOC_NODE="{{ ansible_nodename }}",NOC_USER="{{ noc_user }}",NOC_ROOT="{{ noc_root }}",NOC_ENV="{{ noc_env }}",NOC_LOGLEVEL="{{noc_config.config[service].loglevel }}",LD_PRELOAD={% if jemalloc_path %}"{{ jemalloc_path }}"{% endif %}
-            {% endif %}
-        {% endif %}
-    {% endfor %}
-{% endfor %}
+environment=NOC_CONFIG="{{config_order}}"{% if not 'global' in p -%},NOC_POOL="{{ p }}"{% endif %},NOC_DC="{{ noc_dc }}",NOC_NODE="{{ ansible_nodename }}",NOC_USER="{{ noc_user }}",NOC_ROOT="{{ noc_root }}",NOC_ENV="{{ noc_env }}",NOC_LOGLEVEL="{{noc_config.config[service].loglevel }}",LD_PRELOAD={% if jemalloc_path %}"{{ jemalloc_path }}"{% endif %}
+
+        {%- endif -%}
+    {%- endif -%}
+{%- endfor -%}
