repo side-by-side
--HG--
branch : feature/microservices

--- a/services/web/apps/main/desktop/templates/desktop.html
+++ b/services/web/apps/main/desktop/templates/desktop.html
@@ -20,6 +20,8 @@
         <link rel="stylesheet" type="text/css" href="/main/style/css/" />
         <link rel="stylesheet" type="text/css" href="/ui/pkg/codemirror/lib/codemirror.css" />
         <link rel="stylesheet" type="text/css" href="/ui/pkg/codemirror/addon/dialog/dialog.css" />
+        <link rel="stylesheet" type="text/css" href="/ui/pkg/codemirror/addon/merge/merge.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/noc/codemirror.css" />
         <link rel="stylesheet" type="text/css" href="/ui/pkg/joint/joint.min.css" />
         <!-- l10n -->
         <link rel="gettext" href="/ui/web/translations/{{ language }}.json" lang="{{ language }}">
@@ -37,6 +39,8 @@
         <script type="text/javascript" src="/ui/pkg/codemirror/addon/selection/active-line.js"></script>
         <script type="text/javascript" src="/ui/pkg/codemirror/addon/mode/loadmode.js"></script>
         <script type="text/javascript" src="/ui/pkg/codemirror/addon/edit/matchbrackets.js"></script>
+        <script type="text/javascript" src="/ui/common/diff_match_patch.js"></script>
+        <script type="text/javascript" src="/ui/pkg/codemirror/addon/merge/merge.js"></script>
         <script type="text/javascript" src="/ui/pkg/filesaver/filesaver.min.js"></script>
         <!-- NOC modules -->
         <script type="text/javascript" src="/ui/common/gettext.js"></script>
