--- a/ansible/roles/consul/templates/etc/telegraf/telegraf.d/consul.conf.j2
+++ b/ansible/roles/consul/templates/etc/telegraf/telegraf.d/consul.conf.j2
@@ -1,8 +1,10 @@
 [[inputs.procstat]]
 pid_file = "{{ consul_pid_path }}"
 
-# will not work until https://github.com/influxdata/telegraf/issues/2422
-#[[inputs.consul]]
-#  address = "consul:8500"
-#  token = "{{ consul_acl_master_token }}"
-#  datacentre = "{{ consul_datacenter }}"
+
+{% if consul_node_role == 'bootstrap' %}
+[[inputs.consul]]
+  address = "consul:8500"
+  token = "{{ consul_acl_master_token }}"
+  datacentre = "{{ consul_datacenter }}"
+{% endif %}
