--- a/ansible/roles/consul/templates/consul_systemd.service.j2
+++ b/ansible/roles/consul/templates/consul_systemd.service.j2
@@ -18,7 +18,7 @@ User={{ consul_user }}
 Group={{ consul_group }}
 PIDFile={{ consul_pid_path }}
 PermissionsStartOnly=true
-ExecStartPre=-/bin/mkdir /var/run/consul
+ExecStartPre=-/bin/mkdir -p /var/run/consul
 ExecStartPre=/bin/chown -R {{ consul_user }}:{{ consul_group }} /var/run/consul/
 ExecStart={{ consul_bin_path }}/consul agent \
     -config-file={{ consul_config_path }}/config.json \
