--- a/ansible/roles/node/templates/os/Debian/etc/systemd/system/noc.service.j2
+++ b/ansible/roles/node/templates/os/Debian/etc/systemd/system/noc.service.j2
@@ -14,6 +14,7 @@ KillMode=process
 Restart=on-failure
 TimeoutStopSec=240
 LimitNOFILE=8192
+MemoryMax={{ ansible_memtotal_mb * 0.93}}M
 MemoryLimit={{ ansible_memtotal_mb * 0.93}}M
 
 [Install]
