--- a/ansible/roles/node/templates/os/RedHat/etc/systemd/system/noc.service.j2
+++ b/ansible/roles/node/templates/os/RedHat/etc/systemd/system/noc.service.j2
@@ -15,6 +15,8 @@ Restart=on-failure
 TimeoutStopSec=240
 LimitNOFILE=8192
 MemoryMax={{ ansible_memtotal_mb * 0.93}}M
+MemoryLimit={{ ansible_memtotal_mb * 0.93}}M
+
 
 [Install]
 WantedBy=multi-user.target
