#506: Show end-of-sale and end-of-support status in Managed Object card

--- a/services/card/templates/managedobject.html.j2
+++ b/services/card/templates/managedobject.html.j2
@@ -87,7 +87,13 @@
 </tr>
 <tr>
     <th scope="row">{{ _("Model") }}</th>
-    <td>{{ platform }}</td>
+    <td>
+        {{ platform }}
+        {% if platform %}
+            {% if object.platform.is_end_of_sale %}[{{ _("End of Sale") }}]{% endif %}
+            {% if object.platform.is_end_of_support %}[{{ _("End of Support") }}]{% endif %}
+        {% endif %}
+    </td>
 </tr>
 {% if service_summary %}
 <tr>
