--- a/services/web/apps/main/desktop/templates/desktop.html
+++ b/services/web/apps/main/desktop/templates/desktop.html
@@ -42,6 +42,7 @@
         <script type="text/javascript" src="/ui/common/diff_match_patch.js"></script>
         <script type="text/javascript" src="/ui/pkg/codemirror/addon/merge/merge.js"></script>
         <script type="text/javascript" src="/ui/pkg/filesaver/filesaver.min.js"></script>
+        <script type="text/javascript" src="/ui/pkg/visibility/visibility.min.js"></script>
         <!-- NOC modules -->
         <script type="text/javascript" src="/ui/common/gettext.js"></script>
         <script type="text/javascript" src="/static/js/noc/colors.js"></script>
