card: vlan card

--- a/services/card/templates/segment.html.j2
+++ b/services/card/templates/segment.html.j2
@@ -5,6 +5,10 @@
             {{ object.name }} {{ summary | glyph_summary }}
         </th>
     </tr>
+    <tr>
+        <th scope="row">{{ _("Profile") }}</th>
+        <td>{{object.profile.name}}</td>
+    <tr>
     {% if parent %}
     <tr>
         <th scope="row">{{ _("Parent") }}</th>
@@ -80,13 +84,76 @@
                         {{ o.object.address }}<br/>
                         {{ o.object | object_console }}
                     </td>
-                    <td>{{ o.object.platform }}</td>
+                    <td>{% if o.object.platform %}{{ o.object.platform.name }}{% else %}-{% endif %}</td>
                     <td>{{ o.summary | glyph_summary }}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
-            <table>
+            </table>
         </td>
     <tr>
+    {% if object.vlan_border %}
+    <tr>
+        <th scope="row">{{ _("VLAN Translation") }}</th>
+        <td>
+        {% if object.vlan_translation %}
+        <table class="table table-stripped">
+            <thead>
+                <th class="col-sm-6">{{ _("Filter") }}</th>
+                <th class="col-sm-2">{{ _("Rule") }}</th>
+                <th class="col-sm-4">{{ _("Parent") }}</th>
+            </thead>
+            <tbody>
+                {% for vt in object.vlan_translation %}
+                <tr>
+                    <td>{{vt.filter.expression}}</td>
+                    <td>{{vt.rule}}</td>
+                    <td>{{vt.parent_vlan.vlan}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        {{ _("No VLAN propagation") }}
+        {% endif %}
+        <td>
+    </tr>
+    {% endif %}
+    {% if vlans %}
+    <tr>
+        <th scope="row">{{ _("VLANs") }}</th>
+        <td>
+        <table class="table table-stripped">
+            <thead>
+                <th class="col-sm-2">{{ _("VLAN") }}</th>
+                <th class="col-sm-4">{{ _("Name") }}</th>
+                <th class="col-sm-2">{{ _("State") }}</th>
+                <th class="col-sm-4">{{ _("Translation") }}</th>
+            </thead>
+            <tbody>
+            {% for vlan in vlans %}
+            <tr>
+                <td><a href="/api/card/view/vlan/{{vlan.id}}/">{{vlan.vlan}}</a></td>
+                <td><a href="/api/card/view/vlan/{{vlan.id}}/">{{vlan.name}}</a></td>
+                <td>{{vlan.state.name}}</td>
+                <td>
+                {% if vlan.parent %}
+                {{vlan.translation_rule}}: {{vlan.parent.vlan}} ->
+                {% if vlan.translation_rule == "map" %}
+                [<a href="/api/card/view/vlan/{{vlan.parent.id}}/">{{vlan.parent.vlan}}</a>]
+                {% endif %}
+                {% if vlan.translation_rule == "push" %}
+                [<a href="/api/card/view/vlan/{{vlan.parent.id}}/">{{vlan.parent.vlan}}</a>,
+                <a href="/api/card/view/vlan/{{vlan.id}}/">{{vlan.vlan}}</a>]
+                {% endif %}
+                {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        </td>
+    </tr>
+    {% endif %}
 </tbody>
 </table>
