card: show interfaces in VLAN

--- a/services/card/templates/vlan.html.j2
+++ b/services/card/templates/vlan.html.j2
@@ -34,5 +34,86 @@
         </td>
     </tr>
     {% endif %}
+    {% if interfaces["has_interfaces"] %}
+    <tr>
+        <th scope="row">{{ _("Interfaces") }}</th>
+        <td>
+            <table class="table table-stripped">
+            <thead>
+                <th class="col-sm-2">{{ _("Object") }}</th>
+                <th class="col-sm-2">{{ _("Address") }}</th>
+                <th class="col-sm-8">{{ _("Interfaces") }}</th>
+            </thead>
+            <tbody>
+            <!-- Untagged -->
+            {% if interfaces["untagged"] %}
+            <th colspan="3">{{ _("Untagged") }}</th>
+            {% for i in interfaces["untagged"] %}
+            <tr>
+                <td><a href="/api/card/view/managedobject/{{ i["managed_object"].id }}/">{{ i["managed_object"].name }}</a></td>
+                <td><a href="/api/card/view/managedobject/{{ i["managed_object"].id }}/">{{ i["managed_object"].address }}</a></td>
+                <td>
+                    {% for vi in i["interfaces"] %}
+                        {{vi["name"]}}{% if not loop.last%}, {% endif %}
+                    {% endfor %}
+                </td>
+            </tr>
+            {% endfor %}
+            {% endif %}
+            <!-- Tagged -->
+            {% if interfaces["tagged"] %}
+            <th colspan="3">{{ _("Tagged") }}</th>
+            {% for i in interfaces["tagged"] %}
+            <tr>
+                <td>
+                    <a href="/api/card/view/managedobject/{{ i["managed_object"].id }}/">{{ i["managed_object"].name }}</a>
+                    {% if i["managed_object"].platform %}
+                    <br>{{ i["managed_object"].platform.name }}
+                    {% endif %}
+                </td>
+                <td>
+                    <a href="/api/card/view/managedobject/{{ i["managed_object"].id }}/">{{ i["managed_object"].address }}</a>
+                    {% if i["managed_object"].platform %}
+                    <br>{{ i["managed_object"].platform.name }}
+                    {% endif %}
+                </td>
+                <td>
+                    {% for vi in i["interfaces"] %}
+                        {{vi["name"]}}{% if not loop.last%}, {% endif %}
+                    {% endfor %}
+                </td>
+            </tr>
+            {% endfor %}
+            {% endif %}
+            <!-- L3 -->
+            {% if interfaces["l3"] %}
+            <th colspan="3">{{ _("L3") }}</th>
+            {% for i in interfaces["l3"] %}
+            <tr>
+                <td>
+                    <a href="/api/card/view/managedobject/{{ i["managed_object"].id }}/">{{ i["managed_object"].name }}</a>
+                    {% if i["managed_object"].platform %}
+                    <br>{{ i["managed_object"].platform.name }}
+                    {% endif %}
+                </td>
+                <td>
+                    <a href="/api/card/view/managedobject/{{ i["managed_object"].id }}/">{{ i["managed_object"].address }}</a>
+                    {% if i["managed_object"].platform %}
+                    <br>{{ i["managed_object"].platform.name }}
+                    {% endif %}
+                </td>
+                <td>
+                    {% for vi in i["interfaces"] %}
+                        {{vi["name"]}} ({{vi["ipv4_addresses"]}}){% if not loop.last%}, {% endif %}
+                    {% endfor %}
+                </td>
+            </tr>
+            {% endfor %}
+            {% endif %}
+            </tbody>
+            </table>
+        </td>
+    </tr>
+    {% endif %}
 </tbody>
 </table>
