--- a/services/web/apps/ip/ipam/templates/vrf_index.html
+++ b/services/web/apps/ip/ipam/templates/vrf_index.html
@@ -440,6 +440,12 @@ function on_mynetworks(n)
 <div class="module">
     <table width="100%">
         <caption>{{prefix.prefix}} Info</caption>
+        <!-- State -->
+        <tr class="row1">
+            <td><b>Profile</b></td>
+            <td>{{ prefix.profile.name }}</td>
+        </tr>
+        <!-- State -->
         <tr class="row2">
             <td><b>State</b></td>
             <td>{{ prefix.state }}</td>
